--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link href="space-invaders.css" type="text/css" rel="stylesheet">
+<link href="Space-Invaders.css" type="text/css" rel="stylesheet">
 <title>Space Invaders</title>
 </head>
 <body>
@@ -44,5 +44,5 @@
 	</div>
 </body>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="space-invaders.js"></script>
+	<script src="Space-Invaders.js"></script>
 </html>
