--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link href="Space-Invaders.css" type="text/css" rel="stylesheet">
+<link rel="shortcut icon" type="image/png" href="Assets/alien.png">
 <title>Space Invaders</title>
 </head>
 <body>
